# torch-js

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fetch-native-deps.sh  index.js  jest.config.js  package.json  tsconfig.json
lib/: index.ts  torch.d.ts  torch.js
scripts/: copy-libs.sh  fetch-native-deps.sh
src/: ATen.cc  ATen.h  ScriptModule.cc  ScriptModule.h  Tensor.cc  Tensor.h  addon.cc  constants.cc  constants.h  utils.cc  utils.h
tests/: runTorch.js  test_model.pt  torch_module.py
tests/module/: module.test.ts  test_model.pt
tests/tensor/: rand.test.ts  tensor.test.ts
